# bulletproofs

./: Cargo.toml
benches/: range_proof.rs
src/: generators.rs  inner_product_proof.rs  lib.rs  util.rs
src/r1cs/: prover.rs
src/range_proof/: dealer.rs  messages.rs  mod.rs  party.rs
tests/: range_proof.rs
