[package]
name = "bulletproofs"
# Before doing a release:
# - update version field
# - update html_root_url
# - update CHANGELOG
version = "5.0.0"
authors = ["Cathie Yun <cathieyun@gmail.com>",
           "Henry de Valence <hdevalence@hdevalence.ca>",
           "Oleg Andreev <oleganza@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/zkcrypto/bulletproofs"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "ristretto", "zero-knowledge", "bulletproofs"]
description = "A pure-Rust implementation of Bulletproofs using Ristretto"
edition = "2018"

[dependencies]
curve25519-dalek = { git = 'https://github.com/dalek-cryptography/curve25519-dalek', rev = 'b7e4fc0', features = ["digest", "group", "rand_core", "serde"] }
group = { version = "0.13", default-features = false }
subtle = { version = "2.6", default-features = false }
sha3 = { version = "0.11.0-rc.0", default-features = false }
digest = { version = "0.11.0-rc.0", default-features = false }
rand_core = { version = "0.9", default-features = false }
rand = { version = "0.9", default-features = false, optional = true, features = ["thread_rng"] }
byteorder = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["alloc"] }
serde_derive = { version = "1", default-features = false }
thiserror = { version = "2", optional = true }
merlin = { version = "3", default-features = false }
getrandom = { version = "0.3", features = ["wasm_js"] }
clear_on_drop = { version = "0.2", default-features = false, features = ["no_cc"], optional = true }

[dev-dependencies]
hex = "0.4"
criterion = "0.6"
bincode = {version = "2", features = ["serde"] }
rand_chacha = "0.9"
curve25519-dalek = { git = 'https://github.com/dalek-cryptography/curve25519-dalek', rev = 'b7e4fc0', features = ["digest", "group", "legacy_compatibility", "rand_core", "serde"] }

[features]
default = ["std"]
yoloproofs = []
std = ["rand", "rand/std", "rand/std_rng", "thiserror", "dep:clear_on_drop"]
nightly = ["curve25519-dalek/alloc", "subtle/nightly", "clear_on_drop/nightly"]
docs = ["nightly"]
cloneable = []


[[test]]
name = "range_proof"

[[test]]
name = "r1cs"
required-features = ["yoloproofs"]

[[bench]]
name = "range_proof"
harness = false

[[bench]]
name = "generators"
harness = false

[[bench]]
name = "r1cs"
harness = false
required-features = ["yoloproofs"]

[[bench]]
name = "linear_proof"
harness = false
